[gd_scene load_steps=2 format=3 uid="uid://dv1puytstger8"]

[ext_resource type="Script" uid="uid://c3yy3lhdsds5g" path="res://scenes/column/column_input.gd" id="1_elndj"]

[node name="ColumnInput" type="PanelContainer"]
offset_right = 40.0
offset_bottom = 40.0
script = ExtResource("1_elndj")

[node name="MarginContainer" type="MarginContainer" parent="."]
layout_mode = 2
theme_override_constants/margin_left = 8
theme_override_constants/margin_top = 8
theme_override_constants/margin_right = 8
theme_override_constants/margin_bottom = 8

[node name="VBoxContainer" type="VBoxContainer" parent="MarginContainer"]
layout_mode = 2

[node name="HBoxHeader" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SpacerHeaderLeft" type="Control" parent="MarginContainer/VBoxContainer/HBoxHeader"]
layout_mode = 2
size_flags_horizontal = 3

[node name="DiscardButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxHeader"]
unique_name_in_owner = true
layout_mode = 2
text = "X"

[node name="TitleInput" type="LineEdit" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
custom_minimum_size = Vector2(200, 0)
layout_mode = 2
placeholder_text = "Title..."
max_length = 25

[node name="IndexInput" type="LineEdit" parent="MarginContainer/VBoxContainer"]
unique_name_in_owner = true
layout_mode = 2
placeholder_text = "Index..."
max_length = 2

[node name="HBoxFooter" type="HBoxContainer" parent="MarginContainer/VBoxContainer"]
layout_mode = 2

[node name="SpacerBottomLeft" type="Control" parent="MarginContainer/VBoxContainer/HBoxFooter"]
layout_mode = 2
size_flags_horizontal = 3

[node name="AcceptButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxFooter"]
unique_name_in_owner = true
layout_mode = 2
text = "Add"

[node name="CancelButton" type="Button" parent="MarginContainer/VBoxContainer/HBoxFooter"]
unique_name_in_owner = true
layout_mode = 2
text = "Cancel"

[node name="SpacerBottomRight" type="Control" parent="MarginContainer/VBoxContainer/HBoxFooter"]
layout_mode = 2
size_flags_horizontal = 3

[connection signal="visibility_changed" from="." to="." method="_on_visibility_changed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxHeader/DiscardButton" to="." method="_on_cancel_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxFooter/AcceptButton" to="." method="_on_accept_button_pressed"]
[connection signal="pressed" from="MarginContainer/VBoxContainer/HBoxFooter/CancelButton" to="." method="_on_cancel_pressed"]
